# Emotional-Computer

./: README.md  client.py  config.json  config.py  main.py  pyproject.toml  server.py  telemetry_aggregated.db-shm  telemetry_aggregated.db-wal
emotions/: daemon.py  emotion_labels.json  gmm_clustering.py  labeler.py
models/: features.pkl  gmm_model.pkl  scaler.pkl
telemetry/: aggregator.py  logs.py  telemetry.py  test_aggregator.py  test_live_output.db
