[project]
name = "emotional-computer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=3.2.4",
    "google>=3.0.0",
    "google-genai>=1.73.1",
    "psutil",
    "opentelemetry-sdk",
    "numpy",
    "pandas",
]
